--- a/package.json
+++ b/package.json
@@ -5,5 +5,25 @@
     "express": "^4.18.2",
     "mongodb": "^5.1.0",
     "node": "^19.6.1"
-  }
+  },
+  "name": "foodgasm-server-site",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "start": "index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dipta3/foodgasm-server-site.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/dipta3/foodgasm-server-site/issues"
+  },
+  "homepage": "https://github.com/dipta3/foodgasm-server-site#readme",
+  "description": ""
 }
