--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.1.0",
     "node": "^19.6.1"
   },
   "name": "foodgasm-server-site",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "start": "index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
