--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "main": "index.js",
   "scripts": {
     "start": "index.js",
+    "build": "index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
